--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       font-family: 'Urbanist', sans-serif;
     }
     </style>
-    <title>React App</title>
+    <title>RoKart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
